--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,20 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
+            android:name=".business.util.NSBZ"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:hardwareAccelerated="true"
+            android:icon="@mipmap/logo"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:largeHeap="true"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
+        <meta-data
+                android:name="AA_DB_VERSION"
+                android:value="1"/>
+        <meta-data
+                android:name="AA_DB_NAME"
+                android:value="nsbz_server.db"/>
 
 
         <activity android:name=".MainActivity">
